@@ -2,4 +2,3 @@ set BUILD_CP=%CLASSPATH%
 set BUILD_CP=%BUILD_CP%;%JAVA_HOME%\lib\tools.jar;
 set BUILD_CP=%BUILD_CP%..\devlib\ant.jar;
 set BUILD_CP=%BUILD_CP%..\devlib\ant-nodeps.jar;
-echo %BUILD_CP%
